# jsdelivr_proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  config.example.toml  renovate.json
.github/workflows/: ci.yml  release.yml
manifest/docker/builder/aarch64-musl/: Dockerfile
manifest/docker/builder/aarch64-unknown-linux-musl/: Dockerfile
manifest/docker/builder/x86_64-unknown-linux-musl/: Dockerfile
manifest/docker/release/aarch64-linux-musl/: Dockerfile
manifest/docker/release/x86_64-linux-musl/: Dockerfile
src/: logger.rs  main.rs
src/backend/: mod.rs
src/backend/controller/: index.rs  mod.rs
src/backend/controller/index/: jsdelivr.rs  mod.rs
src/backend/controller/index/jsdelivr/: mod.rs  types.rs
src/backend/fairing/: request_id.rs
src/backend/utils/: mod.rs
src/backend/utils/response/: mod.rs
src/backend/utils/time/: mod.rs
src/cache/: mod.rs
src/command/: mod.rs  version.rs
src/conf/: database.rs  env.rs  jsdelivr.rs  mod.rs  rabbitmq.rs  redis.rs  server.rs
src/utils/: mod.rs
src/utils/response/: mod.rs
src/utils/time/: mod.rs
