[package]
name = "jsdelivr_proxy"
description = "A lightweight JSDelivr Proxy module"
version = "0.1.0"
authors = ["a632079 <a632079@qq.com>"]
keywords = ["hitokoto", "jsdelivr", "proxy"]
license-file = "LICENSE"
repository = "https://github.com/hitokoto-osc/jsdelivr_proxy/"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
chrono = { version = "0.4.19", features = [] }
rustc_version = "0.4"

[dependencies]
base16ct = { version = "0.1.1", features = ["alloc"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive", "env"] }
colored = "2.0.0"
config = "0.13.1"
deadpool-redis = "0.10.2"
lapin = "2.1.1"
lazy_static = "1.4.0"
phf = { version = "0.10.1", features = ["macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.2"
timeago = "0.3.1"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.1.1", features = ["v1", "v4"] }
