[package]
name = "jsdelivr_proxy"
description = "A lightweight JSDelivr Proxy module"
version = "0.1.1"
authors = ["a632079 <a632079@qq.com>"]
keywords = ["hitokoto", "jsdelivr", "proxy"]
license-file = "LICENSE"
repository = "https://github.com/hitokoto-osc/jsdelivr_proxy/"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
chrono = { version = "0.4.22", features = [] }
rustc_version = "0.4"

[dependencies]
anyhow = "1.0.66"
base16ct = { version = "0.1.1", features = ["alloc"] }
bincode = "1.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.20", features = ["derive", "env"] }
colored = "2.0.0"
config = "0.13.2"
deadpool-redis = "0.11.0"
lapin = "2.1.1"
lazy_static = "1.4.0"
phf = { version = "0.11.1", features = ["macros"] }
redis = { version = "0.22", default-features = false, features = ["bytes"] }
reqwest = { version = "0.11.12", features = ["json"] }
# rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json", "uuid"] }
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.37"
timeago = "0.3.1"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
uuid = { version = "1.2.1", features = ["v1", "v4"] }
openssl = { version = "0.10", features = ["vendored"] }

